compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_unclosed_call.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/unclosed-call.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/unclosed-call.ml:3:1]
 2 │   println("hello world"
 3 │ }
   · ┬
   · ╰── expected `)` after arguments
   ╰────
