compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_unexpected_top_level_after_comments.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/unexpected_top_level_after_comments.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/unexpected_top_level_after_comments.ml:3:1]
 2 │ /* block parser boundary trivia */
 3 │ let value = 1
   · ─┬─
   ·  ╰── expected top-level `use`, `pub mod`, `include`, `external`, `type`, or `fn` declaration
   ╰────
  help: try: fn main() { println("hello world") }
