compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_unterminated_block_comment.snap
---
source: tests/fixtures.rs
assertion_line: 5417
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/unterminated_block_comment.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not lex Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/unterminated_block_comment.ml:2:3]
 1 │ fn main() {
 2 │   /* missing close
   ·   ─┬
   ·    ╰── unterminated block comment
 3 │   dbg(1)
   ╰────
  help: stage0 currently accepts a small Riot ML subset
